crates/solidity-v2/testing/snapshots/diagnostics_output/type_system/invalid_function_type_visibility/state_variable/generated/solc/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Diagnostics: 1

[TypeError 6012] Error: Invalid visibility, can only be "external" or "internal".
   ╭─[input.sol:7:5]
   │
 7 │     function (uint256) private x;
   │     ──────────────┬─────────────  
   │                   ╰─────────────── Error occurred here.
───╯
